test/errors/unknown_param_value.ecsact
package unknown_param_value;

component A { i32 a; };

system UnknownParamValue(parallel: what) {
  readwrite A;
}
